tests/some-site/media/nzbget/deployment.yaml
"apiVersion": "apps/v1"
"kind": "Deployment"
"metadata":
  "name": "nzbget"
  "namespace": "media"
"spec":
  "replicas": 1
  "selector":
    "matchLabels":
      "name": "nzbget"
  "strategy":
    "type": "Recreate"
  "template":
    "metadata":
      "labels":
        "name": "nzbget"
    "spec":
      "containers":
      - "args":
        - "-s"
        - "--configfile=/etc/nzbget/nzbget.conf"
        "image": "fish/nzbget:v21.1"
        "name": "nzbget"
        "volumeMounts":
        - "mountPath": "/nzbget/downloads"
          "name": "nzbget"
        - "mountPath": "/media"
          "name": "media"
        - "mountPath": "/etc/ssl/certs/ca-certificates.crt"
          "name": "cacerts"
        - "mountPath": "/etc/nzbget"
          "name": "config"
      "nodeSelector": {}
      "securityContext":
        "fsGroup": 1000
        "runAsUser": 1000
      "volumes":
      - "name": "nzbget"
        "persistentVolumeClaim":
          "claimName": "nzbget"
      - "hostPath":
          "path": "/pool-mirror/media"
        "name": "media"
      - "hostPath":
          "path": "/etc/ssl/certs/ca-certificates.crt"
        "name": "cacerts"
      - "configMap":
          "name": "nzbget-config"
        "name": "config"
