tests/some-site/media/nzbget/ingress.yaml
"apiVersion": "networking.k8s.io/v1"
"kind": "Ingress"
"metadata":
  "annotations":
    "nginx.ingress.kubernetes.io/proxy-body-size": "500m"
  "name": "nzbget"
  "namespace": "media"
"spec":
  "rules":
  - "host": "nzbget.example.com"
    "http":
      "paths":
      - "backend":
          "service":
            "name": "nzbget"
            "port":
              "number": 6789
        "path": "/"
        "pathType": "Prefix"
