tests/some-site/media/nzbget/service.yaml
"apiVersion": "v1"
"kind": "Service"
"metadata":
  "name": "nzbget"
  "namespace": "media"
"spec":
  "ports":
  - "name": "http"
    "port": 6789
    "targetPort": 6789
  "selector":
    "name": "nzbget"
